# yz-rppg-ward

./: CMakeLists.txt
resources/: resources.qrc
resources/styles/: MainWindow.qss  MetricCard.qss  MetricsWidget.qss  SettingsPage.qss  VideoWidget.qss  VitalCard.qss  VitalsWidget.qss  app_dialog.qss  global.qss  health_report_page.qss  home.qss  home_page.qss  main_window.qss  metric_card.qss  metrics_panel.qss  settings.qss  settings_page.qss  status_bar.qss  video_widget.qss  vital_card.qss  vitals_trend_page.qss  vitals_widget.qss
src/: main.cpp
src/core/: AppController.cpp  AppController.h
src/model/: AppConfig.h  MetricInfoData.h  MetricsData.h  TrendChartConstants.h  VitalData.h  VitalsTrendData.h  WsProtocol.h
src/service/: ApiClient.cpp  ApiClient.h  BedService.cpp  BedService.h  ConfigService.cpp  ConfigService.h  FrameUploadService.cpp  FrameUploadService.h  HealthReportService.cpp  HealthReportService.h  MetricsService.cpp  MetricsService.h  NetworkService.cpp  NetworkService.h  VideoService.cpp  VideoService.h  VitalService.cpp  VitalService.h  VitalsTrendService.cpp  VitalsTrendService.h  WebSocketClient.cpp  WebSocketClient.h
src/ui/: MainWindow.cpp  MainWindow.h  style.qss
src/ui/pages/: HealthReportPage.cpp  HealthReportPage.h  HomePage.cpp  HomePage.h  SettingsPage.cpp  SettingsPage.h  VitalsTrendPage.cpp  VitalsTrendPage.h
src/ui/widgets/: AppDialog.cpp  AppDialog.h  BedSettingsGroup.cpp  BedSettingsGroup.h  MetricCard.cpp  MetricCard.h  MetricsWidget.cpp  MetricsWidget.h  NetworkSettingsGroup.h  StatusBar.cpp  StatusBar.h  ToastManager.cpp  ToastManager.h  VideoWidget.cpp  VideoWidget.h  VitalCard.cpp  VitalCard.h  VitalsWidget.cpp  VitalsWidget.h
src/ui/widgets/common/: TimeRangeControlBar.cpp  (+1 more)
src/util/: ImageHelper.cpp  ImageHelper.h  KalmanFilter1D.h  StyleLoader.cpp  StyleLoader.h
(+28 files in other folders)
